# byte-game

./: .gitignore  README.md  main.py  pyproject.toml
byte_game/: __init__.py  game.py  minimax.py  state_change_operator.py  user_interface.py  utils.py
byte_game/model/: __init__.py  board.py  field.py  figure.py
byte_game/playing/: __init__.py  move.py  move_validator.py  player.py
tests/: test_board.py  test_deep_copy.py  test_field.py  test_utils.py
