[tool.poetry]
name = "byte-game"
version = "0.1.0"
description = "Implementation of Byte game, including primitive AI opponent."
authors = [
    "Mihajlo Madic <mihajlo.madic@elfak.rs>",
    "Veljko Veljovic <veljko.vv@elfak.rs>",
    "Vasilije Tomovic <vasilije.tomovic@elfak.rs>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.11.0"
isort = "^5.12.0"
pycln = "^2.4.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
